<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="10dp"
    app:contentPadding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10"
            android:hint="@string/Nome"
            android:text="@string/Nome"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/descrição"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10"
            android:hint="@string/Descrição"
            android:text="@string/Descrição"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/responsável"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10"
            android:hint="@string/Responsável"
            android:text="@string/Responsável"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="34sp"
            android:textStyle="bold"
            tools:text="RESPONSÁVEL" />

        <TextView
            android:id="@+id/data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10"
            android:text="@string/data"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="34sp"
            android:textStyle="bold"
            tools:text="DATA" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="Em Andamento" />

        <Spinner
            android:id="@+id/categoria"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="10" />

        <Button
            android:id="@+id/botaodeletar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Deletar" />

    </LinearLayout>
</androidx.cardview.widget.CardView>